--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-    <div id="uno">
-        <h3 class="heading">Heading</h3>
-    </div>
 
+    <h3>Heading</h3>
 
     <p>Lorem</p>
     <p>Ipsum</p>
